# SubsequenceFinderPy

./: .gitignore  README.md
python/: pyproject.toml
rust/: Cargo.toml
rust/src/: backend.rs  lib.rs
