[package]
name = "subsequence_finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "subsequence_finder"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"

[lints.rust]
unsafe_code = "forbid"

[profile.release]
strip = true		# strip debug symbols
lto = true			# optimize during linking, not compilation
codegen-units = 1	# Using 1 codegen-unit enables more convoluted optimizations
panic = "abort"		# Don't include code necessary to stack trace panics

